feat(runtime)!: add Pulse diagnostics
Publish shared CPU/memory diagnostics and JFR events; add perf, ram and combined HUD. Bound I/O, connect cancellation, close services, and snapshot utility configuration. Preserve API descriptors with default additions.

BREAKING CHANGE: retire SmartSwap and automatic OS swap creation. Preserve legacy config bytes and warn when enabled; JVM/OS memory remains operator-owned. Disable legacy automatic CDS/GC/heap tuning.

Validated 9335 server tests, 522 API tests and fixture test (24 skipped). SPEC V2-V5,V7; full modernization remains a staged roadmap.